--- a/config/custodial.yml
+++ b/config/custodial.yml
@@ -1,3 +1,3 @@
-application_data: sqlite:///data/custodial.sqlite3,
-chrome_history_file: ~/Library/Application Support/Google/Chrome/Default/History,
+application_data: sqlite:///data/custodial.sqlite3
+chrome_history_file: ~/Library/Application Support/Google/Chrome/Default/History
 data_directory: data
